[gd_scene load_steps=7 format=3 uid="uid://bteundxtbjnyp"]

[ext_resource type="Texture2D" uid="uid://5ruvd35h7xue" path="res://Assets/blanco.png" id="1_pk2s4"]
[ext_resource type="Script" path="res://game.gd" id="2_joplo"]
[ext_resource type="FontFile" uid="uid://w6ggvui8132u" path="res://Fonts/Saiyan-Sans.ttf" id="3_n0lre"]

[sub_resource type="LabelSettings" id="LabelSettings_ciiok"]
font = ExtResource("3_n0lre")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4kqf8"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v7jo8"]
font = ExtResource("3_n0lre")
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="Blanco" type="Sprite2D"]
position = Vector2(188, 392)
scale = Vector2(1.59909, 1.5)
texture = ExtResource("1_pk2s4")
script = ExtResource("2_joplo")

[node name="Label2" type="Label" parent="."]
offset_left = -103.809
offset_top = -243.333
offset_right = 89.1911
offset_bottom = -203.333
text = "Quiz Doblaje"
label_settings = SubResource("LabelSettings_ciiok")

[node name="Label" type="Label" parent="."]
offset_left = -111.939
offset_top = -156.667
offset_right = 107.061
offset_bottom = -118.667
label_settings = SubResource("LabelSettings_4kqf8")

[node name="Button" type="Button" parent="."]
offset_left = -80.0455
offset_top = -88.6667
offset_right = 76.9545
offset_bottom = -51.6667

[node name="Button2" type="Button" parent="."]
offset_left = -81.2962
offset_top = -41.3334
offset_right = 75.7038
offset_bottom = -4.33337

[node name="Button3" type="Button" parent="."]
offset_left = -83.1722
offset_top = 7.99996
offset_right = 73.8278
offset_bottom = 45.0

[node name="Button4" type="Button" parent="."]
offset_left = -83.0
offset_top = 53.0
offset_right = 75.0
offset_bottom = 90.0

[node name="Label3" type="Label" parent="."]
offset_left = -46.9016
offset_top = 113.333
offset_right = 66.0984
offset_bottom = 144.333
label_settings = SubResource("LabelSettings_v7jo8")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
